# player_python

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ClientTest.py  LICENSE  Logic.py  README.md  changes.md  logic.py  logic_ahead.py  logic_card_spam.py  logic_current_end.py  logic_test.py  pyproject.toml  readthedocs.yaml  requirements.txt  ruff.toml  run.bat  setup.py  start.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bindings.yml  cd.yaml  cd.yml  ci.yaml  continuous_deployment.yml  convert.yaml  convert.yml  prerelease.yaml  publish.yaml  push.yaml  release.yaml  rust-clippy.yml  testpy314.yml
docs/: appending  conf.py  index.rst  modules.rst  requirements.txt  socha.api.networking.rst  socha.api.plugin.rst  socha.api.protocol.rst  socha.api.rst  socha.rst
protocol-examples/: 127.000.000.001.13050-127.000.000.001.40384.xml  127.000.000.001.13050-127.000.000.001.43976.xml  127.000.000.001.13050-127.000.000.001.43984.xml  127.000.000.001.13050-127.000.000.001.43992.xml  127.000.000.001.13050-127.000.000.001.56204.xml  127.000.000.001.13050-127.000.000.001.56206.xml  127.000.000.001.40384-127.000.000.001.13050.xml  127.000.000.001.43976-127.000.000.001.13050.xml  127.000.000.001.43984-127.000.000.001.13050.xml  127.000.000.001.43992-127.000.000.001.13050.xml  127.000.000.001.56204-127.000.000.001.13050.xml  127.000.000.001.56206-127.000.000.001.13050.xml  README.md
python/socha/: __init__.py  _socha.pyi  socha.pyi  starter.py
python/socha/api/networking/: __init__.py  _network_interface.py  _xflux.py  game_client.py  network_socket.py  player_client.py  utils.py  xml_protocol_interface.py
python/socha/api/protocol/: protocol.py  protocol_packet.py  room_message.py
python/socha/utils/: package_builder.py
socha/: __init__.py  starter.py
socha/api/networking/: _network_interface.py  _xflux.py  game_client.py  network_socket.py  player_client.py  xml_protocol_interface.py
socha/api/plugin/: __init__.py  penguins.py
socha/api/plugin/penguins/: board.py  coordinate.py  game_state.py  team.py  utils.py
socha/api/protocol/: __init__.py  protocol.py  protocol_packet.py  room_message.py
socha/utils/: package_builder.py
src/: lib.rs  lib2025.rs  plugin.rs  plugin2025.rs  plugin2026.rs  plugins.rs
src/SoftwareChallengeClient/: __init__.py
src/SoftwareChallengeClient/api/: Shared.py
src/SoftwareChallengeClient/api/networking/: NetworkInterface.py  xmlBindingTest.py
src/SoftwareChallengeClient/api/networking/clients/: PlayerClient.py
src/SoftwareChallengeClient/api/networking/xflux/: XFlux.py  XFluxDecorator.py  XFluxInterface.py
src/SoftwareChallengeClient/api/protocol/: CloseConnection.py  Protocol.py  ProtocolPacket.py  RoomPacket.py  SharedProtocols.py  __init__.py  protocol.py
src/SoftwareChallengeClient/api/protocol/requests/: LobbyRequest.py  (+1 more)
src/SoftwareChallengeClient/api/sc/: Plugin2023.py
src/SoftwareChallengeClient/player/: PlayerClient.py  Starter.py
src/SoftwareChallengeClient/server_api/networking/: IClient.py
src/SoftwareChallengeClient/server_api/protocol/: CloseConnection.py  RoomPacket.py  Shared.py  __init__.py
src/plugin/: action.rs  actions.rs  bitboard.rs  board.rs  constants.rs  coordinate.rs  errors.rs  field.rs  game_state.rs  hare.rs  move.rs  penguin.rs  rules_engine.rs  segment.rs  ship.rs  team.rs  test.rs
src/plugin/action/: advance.rs  card.rs  eat_salad.rs  exchange_carrots.rs  fall_back.rs
src/plugin/actions/: accelerate.rs  advance.rs  card.rs  fall_back.rs  push.rs  turn.rs
src/plugin/errors/: acceleration_errors.rs  advance_errors.rs  invalid_move_exception.rs  movement_error.rs  push_error.rs  turn_error.rs
src/plugin/test/: advance_test.rs  board_test.rs  card_test.rs  game_state.rs  rules_test.rs  state_test.rs
src/plugin2025/: action.rs  errors.rs  field.rs  move.rs  rules_engine.rs
src/plugin2025/action/: advance.rs  card.rs  eat_salad.rs  exchange_carrots.rs  fall_back.rs
src/plugin2025/test/: advance_test.rs  board_test.rs  card_test.rs  rules_test.rs  state_test.rs
src/plugin2026/: board.rs  errors.rs  field_type.rs  game_state.rs  move.rs  rules_engine.rs  utils.rs
src/plugin2026/test/: board_test.rs  common.rs  coordinate_test.rs  game_state_test.rs  mod.rs  rules_engine_test.rs
src/plugin2026/utils/: constants.rs  coordinate.rs  direction.rs  team.rs  vector.rs
src/plugins/: penguins.rs
src/plugins/penguins/: bitboard.rs  board.rs  coordinate.rs  field.rs  game_state.rs  move.rs  penguin.rs  team.rs  vector.rs
src/socha/: starter.py
src/socha/api/networking/: _network_interface.py  _xflux.py  player_client.py
src/socha/api/protocol/: __init__.py  protocol.py  room_message.py
src/software_challenge_client/: api.py  connect_server.py  test_pyx.py
src/software_challenge_client/player/: PlayerClient.py
src/software_challenge_client/server_api/: Shared.py  XStreamDecorator.py  decorations.py
src/software_challenge_client/server_api/networking/: IClient.py  NetworkInterface.py  PaxbStream.py  TESTNetwork.py  XStream.py
src/software_challenge_client/server_api/protocol/: CloseConnection.py  ProtocolPacket.py  RoomPacket.py  Shared.py  __init__.py  test.py
src/software_challenge_client/server_api/xflux/: XFlux.py  XFluxDecorator.py  XFluxInterface.py  XTranslateDecorator.py
src/software_challenge_client/server_api/xtranslate/: XTranslate.py  XTranslateDecorator.py  XTranslateInterface.py
tests/: test_network.py  test_penguins.py  test_starter.py
(+27 files in other folders)
