[package]
name = "socha"
version = "2.0.0"
edition = "2021"

[lib]
name = "socha"
crate-type = ["cdylib"]

[dependencies]
socha-rust-core = { git = "https://github.com/maxblan/socha-rust-core", branch = "main" }
pyo3 = { version = "0.20.0", features = ["extension-module"] }
libm = "0.2.5"
libmath = "0.2.1"
