[package]
name = "_socha"
version = "2.2.0"
edition = "2021"

[lib]
name = "socha"
crate-type = ["cdylib"]

[dependencies]
libm = "0.2.5"
libmath = "0.2.1"
regex = "1.7.1"
yaserde = "0.10.0"
yaserde_derive = "0.10.0"
pyo3 = { version = "0.20.0" }
pyo3-log = "0.9.0"
log = "0.4.20"

[features]
extension-module = ["pyo3/extension-module"]
