[package]
name = "_socha"
version = "4.3.4"
edition = "2021"

[lib]
name = "socha"
crate-type = ["cdylib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.27.1", optional = true }
pyo3-log = { version = "0.13.2", optional = true }
log = "0.4.20"
itertools = "0.13.0"
