[build-system]
requires = ["maturin==1.3.0"]
build-backend = "maturin"

[project]
name = "socha"
version = "2.0.1"
authors = [{ name = "maxblan", email = "stu222782@mail.uni-kiel.de" }]
description = "This is the package for the Software-Challenge Germany 2023. This Season the game will be 'Hey, danke für den Fisch' a.k.a. 'Penguins' in short."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["xsdata==22.9"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Typing :: Typed",
]
homepage = "https://software-challenge.de/"
repository = "https://github.com/FalconsSky/socha-python-client"
documentation = "https://software-challenge-python-client.readthedocs.io/en/latest/"

[project.urls]
"Bug Tracker" = "https://github.com/FalconsSky/Software-Challenge-Python-Client/issues"

[tool.maturin]
python-source = "python"
module-name = "socha._socha"
exclude = [".github", "docs", "tests", "logic.py", "readthedocs.yaml"]
features = ["pyo3/extension-module"]
