[build-system]
requires = ["maturin==1.6.0"]
build-backend = "maturin"

[project]
name = "socha"
version = "3.7.1"
authors = [{ name = "maxblan", email = "stu222782@mail.uni-kiel.de" }]
description = "Dieses Paket ist für die Software-Challenge Germany 2025, bei der in dieser Saison das Spiel 'Hase und Igel' im Mittelpunkt steht."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["xsdata==22.9"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "Typing :: Typed",
]

[project.urls]
homepage = "https://software-challenge.de/"
repository = "https://github.com/FalconsSky/socha-python-client"
documentation = "https://software-challenge-python-client.readthedocs.io/en/latest/"
bug-tracker = "https://github.com/FalconsSky/Software-Challenge-Python-Client/issues"

[tool.maturin]
python-source = "python"
module-name = "socha._socha"
exclude = [".github", "docs", "tests", "logic.py", "readthedocs.yaml"]
features = ["pyo3/extension-module"]
